Get xgettext (>= 0.13) to process fslint.glade directly rather than the deprecated method of outputting fslint.c from glade. For one thing, this allows one to mark widgets as non translatable, which glade did not honour when creating the c file for translation.
Realign all the po files with the newly generated fslint.pot.


git-svn-id: https://fslint.googlecode.com/svn/trunk@6 494acc53-a219-0410-adff-8f8ff343f446

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Pádraig Brady <P@draigBrady.com>
 Build-Depends: debhelper (>= 4.0.0)
-Build-Depends-Indep: gettext
+Build-Depends-Indep: gettext (>= 0.13)
 Standards-Version: 3.7.2
 
 Package: fslint
