Fix lintian warnings
git-svn-id: https://fslint.googlecode.com/svn/trunk@45 494acc53-a219-0410-adff-8f8ff343f446

--- a/debian/control
+++ b/debian/control
@@ -12,11 +12,11 @@ Depends: python (>= 2.0), python-gtk2, python-glade2
 Description: A utility to fix problems with filesystems' data, like duplicate files
  FSlint is a toolkit to clean filesystem lint. It includes a GTK+ GUI
  as well as a command line interface and can be used to reclaim disk space.
- It has a handy interface for uninstalling packages, and it can find things like:
+ It has an interface for uninstalling packages, and it can find things like:
  .
- - Duplicate files
- - Problematic filenames
- - Temporary files
- - Bad symlinks
- - Empty directories
- - Nonstripped binaries
+    - Duplicate files
+    - Problematic filenames
+    - Temporary files
+    - Bad symlinks
+    - Empty directories
+    - Nonstripped binaries
