Add an indenting checker/fixer to the "redundant whitespace" function. This finds text files with erroneous mixing of tabs and spaces in the indenting at the start of a line.
The spanish translation was updated for this also.

Note I also removed the translations for 'Yes', 'No', 'Cancel'
from all the translations, as they were only used for GTK+ buttons,
and stock buttons for those are always available.


git-svn-id: https://fslint.googlecode.com/svn/trunk@52 494acc53-a219-0410-adff-8f8ff343f446

--- a/po/Makefile
+++ b/po/Makefile
@@ -13,8 +13,8 @@ $(DOMAIN).pot: ../fslint.glade ../fslint-gui
 update-po: $(DOMAIN).pot
 	for po in *.po; do \
 		lingua=`basename $$po .po`; \
-	        mv $$lingua.po $$lingua.old.po; \
-		if msgmerge -o $$lingua.po $$lingua.old.po $(DOMAIN).pot; then \
+		mv $$lingua.po $$lingua.old.po; \
+		if msgmerge -N -o $$lingua.po $$lingua.old.po $(DOMAIN).pot; then \
 		    rm $$lingua.old.po; \
 		else \
 		    rm -f $$lingua.po; \
