minor debian packaging suggestions from Bart Martens
git-svn-id: https://fslint.googlecode.com/svn/trunk@90 494acc53-a219-0410-adff-8f8ff343f446

--- a/debian/control
+++ b/debian/control
@@ -20,3 +20,5 @@ Description: A utility to fix problems with filesystems' data, like duplicate fi
     - Bad symlinks
     - Empty directories
     - Nonstripped binaries
+ .
+  Homepage: http://www.pixelbeat.org/fslint/
