The rpm was not building on mandrake as fslint.desktop had the file extension specified for the icon. So I've fixed this and also updated the icon to something more modern. Note I tried to install the icon to /usr/share/icons/hicolor/48x48/apps/ as per the freedesktop spec, but that couldn't be found on my fedora 8 system, so I left it in the traditional /usr/share/pixmaps/
git-svn-id: https://fslint.googlecode.com/svn/trunk@168 494acc53-a219-0410-adff-8f8ff343f446

--- a/fslint.desktop
+++ b/fslint.desktop
@@ -4,5 +4,5 @@ Comment=File System Lint
 Exec=fslint-gui
 Terminal=false
 Type=Application
-Icon=fslint_icon.png
+Icon=fslint_icon
 Categories=System;Filesystem;GTK;
