Remove all fuzzy references from po files. Also get msgfmt to ignore fuzzy matches. Note msgmerge already did in revision 52.
git-svn-id: https://fslint.googlecode.com/svn/trunk@186 494acc53-a219-0410-adff-8f8ff343f446

--- a/po/Makefile
+++ b/po/Makefile
@@ -26,7 +26,7 @@ update-po: $(DOMAIN).pot
 mo:
 	for po in *.po; do \
 		lingua=`basename $$po .po` ; \
-		msgfmt -cf -o $$lingua.mo $$po ; \
+		msgfmt -c -o $$lingua.mo $$po ; \
 		mkdir -p locale/$$lingua/LC_MESSAGES/ ; \
 		ln -f $$lingua.mo locale/$$lingua/LC_MESSAGES/$(DOMAIN).mo ; \
 	done
