--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Standards-Version: 3.7.3
 
 Package: fslint
 Architecture: all
-Depends: python (>= 2.0), python-gtk2, python-glade2
+Depends: python (>= 2.0), python-gtk2, python-glade2, findutils
 Description: A utility to fix problems with filesystems' data, like duplicate files
  FSlint is a toolkit to clean filesystem lint. It includes a GTK+ GUI
  as well as a command line interface and can be used to reclaim disk space.
