Fix type in r187. Hopefully now make install will work on systems with ginstall present (like opensolaris)
git-svn-id: https://fslint.googlecode.com/svn/trunk@222 494acc53-a219-0410-adff-8f8ff343f446

--- a/po/Makefile
+++ b/po/Makefile
@@ -1,7 +1,7 @@
 DATADIR = /usr/share/
 LOCALEDIR = $(DATADIR)/locale
 DOMAIN = fslint
-INSTALL = $(shell ginstall --help >dev/null 2>&1 && echo ginstall || echo install)
+INSTALL = $(shell ginstall --help >/dev/null 2>&1 && echo ginstall || echo install)
 MSGFMT = $(shell msgfmt --help 2>&1 | grep -- "--check" >/dev/null && echo "msgfmt -c" || echo "msgfmt")
 
 all: mo
