improve fslint.desktop to aid discovery
From http://pad.lv/1170236


git-svn-id: https://fslint.googlecode.com/svn/trunk@290 494acc53-a219-0410-adff-8f8ff343f446

--- a/fslint.desktop
+++ b/fslint.desktop
@@ -1,8 +1,9 @@
 [Desktop Entry]
 Name=FSlint
-Comment=File System Lint
+Comment=File System Lint detector and cleaner
 Exec=fslint-gui
 Terminal=false
 Type=Application
 Icon=fslint_icon
-Categories=System;Filesystem;GTK;
+Categories=System;Filesystem;GTK;Utility;
+X-Ubuntu-Gettext-Domain=fslint
