The desktop file needs keywords.
Searching for an application goes through Name, Comment, Exec and
Keywords. The "Keywords" field allows to add relevant search words
without polluting other fields used for display or execution.

--- a/fslint.desktop
+++ b/fslint.desktop
@@ -7,3 +7,4 @@ Type=Application
 Icon=fslint_icon
 Categories=System;Filesystem;GTK;Utility;
 X-Ubuntu-Gettext-Domain=fslint
+Keywords=duplicate;redundant;file;
